--- a/index.html
+++ b/index.html
@@ -11,29 +11,38 @@
 </head>
 
 <body>
-
+      <!-- full part -->
    <section>
       <div class="container">
          <div class="cart">
             <div class="col-md-12 col-lg-10 mx-auto">
+
+               <!-- first part -->
+
                <div class="cart-item">
                   <div class="row">
                      <div class="col-md-7 center-item">
                         <img src="images/product-1.png" alt="">
                         <h5>iPhone 11 128GB Black</h5>
                      </div>
-
+                     <!-- calculation part -->
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="decreaseQuantity" class="btn btn-default">
+                              <i class="fas fa-minus"></i>
+                           </button>
+                           <input id="increaseAmount" type="text" class="form-control text-center" value="1">
+                           <button id="increaseQuantity" class="btn btn-default">
+                              <i class="fas fa-plus"></i>
+                           </button>
                         </div>
                         <h5>$ <span id ="oneIphonePrice">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
                </div>
+
+                 <!-- second part -->
 
                <div class="cart-item">
                   <div class="row">
@@ -43,9 +52,13 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button class="btn btn-default">
+                              <i class="fas fa-minus"></i>
+                           </button>
                            <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button class="btn btn-default">
+                              <i class="fas fa-plus"></i>
+                           </button>
 
                         </div>
                         <h5>$ <span id = "oneCasePrice">59</span></h5>
@@ -53,6 +66,8 @@
                      </div>
                   </div>
                </div>
+                
+               <!-- 3rd part -->
 
                <div class="cart-item">
                   <div class="row">
@@ -63,6 +78,7 @@
                         <h5>Total:</h5>
                      </div>
 
+                      <div id="checkout-area">
                      <div class="col-md-4 status">
                         <h5>$1,278</h5>
                         <h5>$0</h5>
@@ -70,19 +86,33 @@
                      </div>
                   </div>
                </div>
+               </div>
+
+               <!-- 4th part -->
+
                <div class="col-md-12 pt-4 pb-4">
-                  <button id ="checkOut" class="btn btn-success check-out">Check Out</button>
+                  <button id="checkOut" class="btn btn-success check-out">Check Out</button>
                </div>
             </div>
          </div>
       </div>
    </section>
+   <div id ="buying iPhone">
+
+   </div>
    <script>
   // check-out button event handler
-  const checkOutBtn = document.getElementById("checkOut");
-     checkOutBtn.addEventListener("click", function(){
-             console.log("amk marse");
-     })
+       const checkOutBtn = document.getElementById("checkOut");
+       checkOutBtn.addEventListener("click", function(){
+               const checkoutArea = document.getElementById("checkout-area");
+       })
+         
+      //
+      const increaseBtn = document.getElementById("decreaseQuantity");
+      increaseBtn.addEventListener("click", function(){
+         const increaseAmount = document.getElementById("increaseAmount");
+      })
+
    </script>
 </body>
 
